# C.O.R.E

./: .gitignore  CMakeLists.txt  Pipfile  README.md  analyze_hits.py  app.py  test_bindings.py
config/: cas12a_config.json  spcas9_config.json
cuda_fix/crt/: math_functions.h
include/: config.hpp  encoder.hpp  gpu_utils.hpp  kernel.hpp  loader.hpp
scripts/: setup_build.sh
src/: config.cpp  encoder.cpp  kernel.cu  loader.cpp  main.cpp  python_bindings.cpp
tools/: annotate_gene.py  build_epigenome.py  download_epigenomics.py  generate_genome.py
